--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
