--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
